<resources>
    <string name="google_maps_api_key">AIzaSyArWhst-O3Hfv3-GQXOLrSDZY9M8jqAv5g</string>

    <string name="app_name">Pitjarus Tracking</string>
    <string name="office_name">Pitjarus Teknologi</string>
    <string name="title_login">Login</string>
    <string name="title_update">Check Update</string>
    <string name="title_save_login_info">Remember Me</string>
    <string name="title_apk">App Ver 1.0.0 20013FEA6BCC820C</string>

    <string name="title_list_store">Daftar Toko</string>
    <string name="title_dashboard_store">Dashboard Toko</string>
    <string name="title_status_store">Perfect Store</string>
    <string name="title_wrong_login">Username atau Password salah !</string>

    <string name="tag_channel_name">%1$s : %2$s</string>
    <string name="tag_area_name">%1$s - %2$s</string>
    <string name="tag_progres">%1$d / %2$d</string>

    <string name="title_button_login">Login</string>
    <string name="title_button_reset">Reset</string>
    <string name="title_button_visit">Visit</string>
    <string name="title_button_no_visit">No Visit</string>
    <string name="title_button_finished">Selesai Visit</string>

    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>


    <string name="hint_search_store_name">Cari nama toko</string>
</resources>