<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".features.login.LoginActivity"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@color/primaryLight">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_application"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/office_name"
                android:layout_margin="@dimen/normalMargin"
                android:textColor="@color/white"
                style="@style/textAppTitleStyle"/>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingBottom="@dimen/normalPadding">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/normalPadding"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/normalMargin"
                    android:layout_marginBottom="@dimen/highMargin"
                    android:text="@string/title_login"
                    style="@style/textActivityTitleStyle"/>
                <EditText
                    android:id="@+id/etUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/normalMargin"
                    android:elevation="@dimen/veryLowMargin"
                    android:drawableLeft="@drawable/ic_username"
                    android:drawablePadding="@dimen/normalPadding"
                    android:hint="@string/hint_username"
                    style="@style/inputCommonBox"/>
                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:elevation="@dimen/veryLowMargin"
                    android:layout_marginBottom="@dimen/normalMargin"
                    android:drawableLeft="@drawable/ic_password"
                    android:drawablePadding="@dimen/normalPadding"
                    android:hint="@string/hint_password"
                    style="@style/inputCommonBox"/>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/highMargin">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:gravity="center"
                        android:orientation="horizontal">
                        <RelativeLayout
                            android:layout_width="@dimen/iconNormalSize"
                            android:layout_height="@dimen/iconNormalSize"
                            android:gravity="center"
                            android:background="@drawable/roundrect_all_primary_low_radius">
                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_checked"/>
                        </RelativeLayout>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/mediumMargin"
                            android:text="@string/title_save_login_info"
                            style="@style/textOverlineStyle"/>
                    </LinearLayout>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:gravity="center"
                        android:drawablePadding="@dimen/mediumPadding"
                        android:drawableStart="@drawable/ic_download"
                        android:text="@string/title_update"
                        style="@style/textOverlineStyle"/>
                </RelativeLayout>
                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_login"
                    style="@style/buttonPrimaryStyle"/>
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:text="@string/title_apk"
                style="@style/textContentBodyStyle"/>
        </RelativeLayout>
    </LinearLayout>
</layout>